--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-	"semi": true,
-	"singleQuote": true,
-	"tabWidth": 2,
-	"jsxBracketSameLine": true,
-	"endOfLine": "lf"
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "jsxBracketSameLine": false,
+  "endOfLine": "lf"
 }
