--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,10 +1,8 @@
 {
   "*.{js, jsx, ts, tsx}": [
-    "eslint --max-warnings=0",
-    "git add"
+    "eslint --max-warnings=0"
   ],
   "src/**/*/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-    "prettier --config .prettierrc --write",
-    "git add"
+    "prettier --config .prettierrc --write"
   ]
 }
