--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,8 +1,8 @@
 {
-  "*.{js, jsx, ts, tsx}": [
+  "src/**/*.+(js | jsx | ts | tsx)": [
     "eslint --max-warnings=0"
   ],
-  "src/**/*/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+  "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
     "prettier --config .prettierrc --write"
   ]
 }
